# test-python-package

./: pyproject.toml
cat_n_dog/cat/: cat.py
cat_n_dog/dog/: dog.py
tests/: test_cat.py
