[tool.poetry]
name = "cat_n_dog"
version = "2.0.2"
description = ""
authors = ["Andrew, Jung DongHo <dongho971220@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
