[tool.poetry]
name = "cat_n_dog"
version = "2000.0.0"
description = ""
authors = ["Andrew, Jung DongHo <dongho971220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
